--- a/02_Phyton_variables.ipynb
+++ b/02_Phyton_variables.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNij9JEXqRnEoPYFmdS/fAy",
+      "authorship_tag": "ABX9TyN6Lvi9HYa98jSHdu+iuRZk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,7 +81,7 @@
         "id": "PG_3ARY3xPGp",
         "outputId": "f757354c-0e0a-4903-9da8-216d73d1bce2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         },
         "outputId": "33b8410b-0843-4374-e50e-84c562b55d0e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "TtZN7zehoyiu",
         "outputId": "02ef83c7-1ea0-4b56-ba45-0496b98bd347"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
       "metadata": {
         "id": "tHZcpeBbpMUZ"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "id": "2zR7tNmuqEg7",
         "outputId": "c67529ad-05e6-4712-d0f6-5f9f070cb022"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "Onchx6fCqSN3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "UsBmD-nEq180"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "metadata": {
         "id": "v7UBUXfMrkWf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
       "metadata": {
         "id": "3PuK6sw0sQ2u"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,15 +341,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jxz6RBFKtFxh",
-        "outputId": "40825398-f23e-485c-8d8c-641065d583a7"
+        "outputId": "62967770-948e-4948-a15f-359325d443c3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6\n"
+            "2\n"
           ]
         }
       ]
@@ -357,7 +357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Text"
+        "### Strings"
       ],
       "metadata": {
         "id": "WCicZ473tkXu"
@@ -378,7 +378,7 @@
         "id": "Ht_rBj70tQTS",
         "outputId": "140dba1f-53d8-474d-8548-cd2994be458c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "id": "OhotpMlpt_HD",
         "outputId": "af93bc86-658e-4cec-b487-db956f3ed637"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
         "id": "IXB8lrMmuonY",
         "outputId": "f0706fe2-e7dd-47a6-b22a-2666bc4c5922"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -462,7 +462,7 @@
         "id": "cKDyizUavBS5",
         "outputId": "4fd7f9a4-b8ea-41c6-ed0e-bd111974eae1"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,10 +480,101 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 5.4 Booleans"
+      ],
+      "metadata": {
+        "id": "UPmOqRK9q-N8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These strings variable but with a very specific text: **true** or **false**"
+      ],
+      "metadata": {
+        "id": "OsTRkph3rN3Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example\n",
+        "\n",
+        "raining = False\n",
+        "daytime = True\n",
+        "raining + daytime"
+      ],
+      "metadata": {
+        "id": "mPePxThMvVhb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7fa3e55d-3257-4c23-cb7e-1ce0ab5b479c"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Boolean expression**"
+      ],
+      "metadata": {
+        "id": "Ky1BE88cs53f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example \n",
+        "\n",
+        "x=5\n",
+        "y=7\n",
+        "\n",
+        "print(\"¿Is x equal than y?\", x== y)\n",
+        "print(\"¿Is x less than y?\", x<y)\n",
+        "print(\"¿Is x greater than y?\", x>y)\n",
+        "print(\"¿Is x not equal than y?\", x!=y)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ci8I3PsuruoZ",
+        "outputId": "26fdd5e3-64bb-4123-a9b5-6be14ece0b36"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿Is x equal than y? False\n",
+            "¿Is x less than y? True\n",
+            "¿Is x greater than y? False\n",
+            "¿Is x not equal than y? True\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mPePxThMvVhb"
+        "id": "d454JMKItTOm"
       },
       "execution_count": null,
       "outputs": []
